CREATE TABLE TB_TUTOR (
                          ID_TUTOR NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                          NOME VARCHAR2(70) NOT NULL,
                          IDADE NUMBER(3),
                          ENDERECO VARCHAR2(255),
                          NUM_TELEFONE VARCHAR2(20),
                          CPF VARCHAR2(14) NOT NULL,
                          CONSTRAINT UQ_TUTOR_CPF UNIQUE (CPF)
);

CREATE TABLE TB_PET (
                        ID_PET NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                        NOME VARCHAR2(50),
                        ESPECIE VARCHAR2(50) NOT NULL,
                        RACA VARCHAR2(50),
                        COR VARCHAR2(50),
                        IDADE NUMBER(3),
                        PESO NUMBER(6,2)
);

CREATE TABLE TB_PET_TUTOR (
                              ID_PET NUMBER(19) NOT NULL,
                              ID_TUTOR NUMBER(19) NOT NULL,
                              CONSTRAINT PK_PET_TUTOR PRIMARY KEY (ID_PET, ID_TUTOR),
                              CONSTRAINT FK_PET_TUTOR_PET FOREIGN KEY (ID_PET) REFERENCES TB_PET (ID_PET),
                              CONSTRAINT FK_PET_TUTOR_TUTOR FOREIGN KEY (ID_TUTOR) REFERENCES TB_TUTOR (ID_TUTOR)
);

CREATE TABLE TB_VET (
                        ID_VET NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                        NOME VARCHAR2(70),
                        AREA VARCHAR2(40),
                        CRMV_PREFIXO VARCHAR2(10) DEFAULT 'CRMV',
                        CRMV_UF VARCHAR2(2) NOT NULL,
                        CRMV_NUMINSCRICAO NUMBER(10) NOT NULL,
                        CRMV_SUFIXO VARCHAR2(2),
                        CONSTRAINT UQ_VET_CRMV UNIQUE (CRMV_UF, CRMV_NUMINSCRICAO)
);

CREATE TABLE TB_AGENDAMENTO (
                                ID_AGENDAMENTO NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                DT_HORA TIMESTAMP NOT NULL,
                                ID_PET NUMBER(19) NOT NULL,
                                ID_VET NUMBER(19) NOT NULL,
                                STATUS VARCHAR2(20) NOT NULL,
                                MOTIVO VARCHAR2(255),
                                CONSTRAINT FK_AGENDAMENTO_PET FOREIGN KEY (ID_PET) REFERENCES TB_PET (ID_PET),
                                CONSTRAINT FK_AGENDAMENTO_VET FOREIGN KEY (ID_VET) REFERENCES TB_VET (ID_VET)
);

CREATE TABLE TB_CONSULTA (
                             ID_CONSULTA NUMBER(19) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                             ID_AGENDAMENTO NUMBER(19),
                             DT_REALIZACAO TIMESTAMP NOT NULL,
                             DIAGNOSTICO VARCHAR2(500) NOT NULL,
                             TRATAMENTO VARCHAR2(500),
                             OBSERVACOES VARCHAR2(500),
                             CONSTRAINT FK_CONSULTA_AGENDAMENTO FOREIGN KEY (ID_AGENDAMENTO) REFERENCES TB_AGENDAMENTO (ID_AGENDAMENTO)
);